// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JasmineServiceAmlSettings should getAmlSettings 1`] = `
Object {
  "auto_blacklist": false,
  "blacklist_algos": null,
  "blacklist_samples_reached": false,
  "compute_target": "compute",
  "cost_mode": 0,
  "data_script": null,
  "debug_log": "automl_errors.log",
  "early_stopping_n_iters": 10,
  "enable_cache": true,
  "enable_early_stopping": false,
  "enable_ensembling": true,
  "enable_feature_sweeping": false,
  "enable_onnx_compatible_models": false,
  "enable_stack_ensemble": true,
  "enable_stack_ensembling": false,
  "enable_subsampling": false,
  "enable_tf": false,
  "enable_voting_ensemble": true,
  "enforce_time_on_windows": true,
  "ensemble_iterations": 15,
  "exclude_nan_labels": true,
  "experiment_exit_score": 0.99,
  "experiment_timeout_minutes": 60,
  "grain_column_names": null,
  "is_timeseries": false,
  "iteration_timeout_minutes": 60,
  "iterations": 15,
  "lag_length": 0,
  "max_concurrent_iterations": 1,
  "max_cores_per_iteration": 2,
  "max_horizon": null,
  "mem_in_mb": null,
  "metric_operation": "maximize",
  "metrics": null,
  "model_explainability": false,
  "n_cross_validations": 5,
  "name": "experiment",
  "num_classes": null,
  "path": "./sample_projects/experiment",
  "preprocess": true,
  "primary_metric": "AUC_weighted",
  "region": "eastus",
  "resource_group": "testResource",
  "sdk_packages": null,
  "sdk_url": null,
  "send_telemetry": true,
  "service_url": null,
  "show_warnings": false,
  "spark_service": null,
  "subsample_seed": null,
  "subscription_id": "00000000-0000-0000-0000-000000000000",
  "task_type": "classification",
  "telemetry_verbosity": "INFO",
  "time_column_name": null,
  "validation_size": 0.2,
  "verbosity": 20,
  "whitelist_models": null,
  "workspace_name": "testWorkSpace",
  "y_max": null,
  "y_min": null,
}
`;

exports[`JasmineServiceAmlSettings should getAmlSettings for forecasting 1`] = `
Object {
  "auto_blacklist": false,
  "blacklist_algos": null,
  "blacklist_samples_reached": false,
  "compute_target": "compute",
  "cost_mode": 0,
  "data_script": null,
  "debug_log": "automl_errors.log",
  "early_stopping_n_iters": 10,
  "enable_cache": true,
  "enable_early_stopping": false,
  "enable_ensembling": true,
  "enable_feature_sweeping": false,
  "enable_onnx_compatible_models": false,
  "enable_stack_ensemble": true,
  "enable_stack_ensembling": false,
  "enable_subsampling": false,
  "enable_tf": false,
  "enable_voting_ensemble": true,
  "enforce_time_on_windows": true,
  "ensemble_iterations": 15,
  "exclude_nan_labels": true,
  "experiment_exit_score": 0.99,
  "experiment_timeout_minutes": 60,
  "grain_column_names": null,
  "is_timeseries": true,
  "iteration_timeout_minutes": 60,
  "iterations": 15,
  "lag_length": 0,
  "max_concurrent_iterations": 1,
  "max_cores_per_iteration": 2,
  "max_horizon": null,
  "mem_in_mb": null,
  "metric_operation": "maximize",
  "metrics": null,
  "model_explainability": false,
  "n_cross_validations": 5,
  "name": "experiment",
  "num_classes": null,
  "path": "./sample_projects/experiment",
  "preprocess": false,
  "primary_metric": "AUC_weighted",
  "region": "eastus",
  "resource_group": "testResource",
  "sdk_packages": null,
  "sdk_url": null,
  "send_telemetry": true,
  "service_url": null,
  "show_warnings": false,
  "spark_service": null,
  "subsample_seed": null,
  "subscription_id": "00000000-0000-0000-0000-000000000000",
  "task_type": "regression",
  "telemetry_verbosity": "INFO",
  "time_column_name": null,
  "validation_size": 0.2,
  "verbosity": 20,
  "whitelist_models": null,
  "workspace_name": "testWorkSpace",
  "y_max": null,
  "y_min": null,
}
`;
